style: adjust padding on cdkMenus to prevent border cutoff (#383)

--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -127,7 +127,6 @@ $nav-popover-width: 192px !default;
 }
 
 .nav-menu {
-	padding: 0;
 	width: $nav-popover-width;
 
 	.dropdown-item {
